--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,7 +159,7 @@ services:
   spark-worker-1:
     image: apache/spark:3.5.3
     hostname: spark-worker-1
-    entrypoint: ["/opt/spark/bin/spark-class"]
+    entrypoint: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
     ports:
       - 8081:8081 # Spark Worker Web UI
     env_file:
@@ -182,7 +182,7 @@ services:
   spark-worker-2:
     image: apache/spark:3.5.3
     hostname: spark-worker-2
-    entrypoint: ["/opt/spark/bin/spark-class"]
+    entrypoint: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
     ports:
       - 8082:8081 # Spark Worker Web UI (mapped to different host port)
     env_file:
