--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,43 +256,53 @@ jobs:
         # Test submitting a Spark application using spark-submit
         run: |
           echo "=== Testing Spark Application Submission ==="
-
           echo "1. Creating a simple PySpark application..."
+
+          # Create directory with proper permissions
           mkdir -p ./spark-apps
+          chmod 755 ./spark-apps
+
+          # Create the Python file with corrected syntax
           cat > ./spark-apps/word_count.py << 'EOF'
           from pyspark.sql import SparkSession
 
           if __name__ == "__main__":
               spark = SparkSession.builder.appName("WordCount").getOrCreate()
               sc = spark.sparkContext
-
+              
               # Create sample data
               text_data = [
                   "Hello Spark World",
-                  "Spark is awesome",
+                  "Spark is awesome", 
                   "Big data processing with Spark"
               ]
-
+              
               # Create RDD and perform word count
               text_rdd = sc.parallelize(text_data)
               words = text_rdd.flatMap(lambda line: line.split())
               word_pairs = words.map(lambda word: (word.lower(), 1))
               word_counts = word_pairs.reduceByKey(lambda a, b: a + b)
-
+              
               print("Word Count Results:")
               for word, count in word_counts.collect():
                   print(f"{word}: {count}")
-
+              
               spark.stop()
           EOF
 
-          echo "2. Submitting PySpark application..."
+          # Set proper permissions on the file
+          chmod 644 ./spark-apps/word_count.py
+
+          echo "2. Verifying file was created..."
+          ls -la ./spark-apps/word_count.py
+
+          echo "3. Submitting PySpark application..."
           docker compose exec spark-client spark-submit \
-            --master spark://spark-master:7077 \
-            --driver-memory 512m \
-            --executor-memory 512m \
-            --total-executor-cores 2 \
-            /opt/spark-apps/word_count.py
+              --master spark://spark-master:7077 \
+              --driver-memory 512m \
+              --executor-memory 512m \
+              --total-executor-cores 2 \
+              /opt/spark-apps/word_count.py
 
           echo "Spark application submission test completed."
 
