--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -399,11 +399,11 @@ services:
       - ./plugins:/opt/airflow/plugins
     networks:
       - hadoop-network
-    depends_on:
-      airflow-db:
-        condition: service_healthy
-      airflow-redis:
-        condition: service_healthy
+#    depends_on:
+#      airflow-db:
+#        condition: service_healthy
+#      airflow-redis:
+#        condition: service_healthy
     # The entrypoint is crucial for initialization: migrate DB and create user
     entrypoint: /bin/bash -c "airflow db migrate && airflow users create --username admin --password admin --firstname Airflow --lastname User --role Admin --email admin@example.com || true"
     profiles: ["init"] # Use profiles to run this only when needed
@@ -427,11 +427,11 @@ services:
       - ./plugins:/opt/airflow/plugins
     networks:
       - hadoop-network
-    depends_on:
-      airflow-db:
-        condition: service_healthy
-      airflow-redis:
-        condition: service_healthy
+#    depends_on:
+#      airflow-db:
+#        condition: service_healthy
+#      airflow-redis:
+#        condition: service_healthy
     command: ["airflow", "webserver"]
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:8090/health | grep 'healthy'"]
@@ -456,11 +456,11 @@ services:
       - ./plugins:/opt/airflow/plugins
     networks:
       - hadoop-network
-    depends_on:
-      airflow-db:
-        condition: service_healthy
-      airflow-redis:
-        condition: service_healthy
+#    depends_on:
+#      airflow-db:
+#        condition: service_healthy
+#      airflow-redis:
+#        condition: service_healthy
     command: ["airflow", "scheduler"]
     healthcheck:
       test: ["CMD-SHELL", "pgrep -f 'airflow scheduler'"]
@@ -485,11 +485,11 @@ services:
       - ./plugins:/opt/airflow/plugins
     networks:
       - hadoop-network
-    depends_on:
-      airflow-db:
-        condition: service_healthy
-      airflow-redis:
-        condition: service_healthy
+#    depends_on:
+#      airflow-db:
+#        condition: service_healthy
+#      airflow-redis:
+#        condition: service_healthy
     command: ["airflow", "celery", "worker"]
     healthcheck:
       test: ["CMD-SHELL", "pgrep -f 'airflow celery worker'"]
